--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <div class="productos_card">
     <div class="card h-100" style="width: 18rem;">
    
-    <img src="/img/productos/D_NQ_NP_834890-MLA46481361896_062021-O.webp" class="card-img-top" alt="cacerola">
+    <img src="./img/productos/cacelora_2.jpg" class="card-img-top" alt="cacerola">
     <div class="card-body">
       <h5 class="card-title">Maestro De Cocina Cacerola Premium Antiadherente 24cm</h5>
       <p class="card-text">$22.308    </p>
@@ -118,7 +118,7 @@
     </div>
   </div>
   <div class="card h-100" style="width: 18rem;">
-    <img src="/img/productos/mixer.png" class="card-img-top" alt="mixer">
+    <img src="./img/productos/mixer.png" class="card-img-top" alt="mixer">
     <div class="card-body">
       <h5 class="card-title">LICUADORA DE MANO SMARTLIFE SL-SM5010PN INOXIDABLE Y NEGRO</h5>
       <p class="card-text">$12.500</p>
@@ -126,7 +126,7 @@
     </div>
   </div>
   <div class="card h-100" style="width: 18rem;">
-    <img src="/img/productos/cello.jpg" class="card-img-top" alt="cello">
+    <img src="./img/productos/cello.jpg" class="card-img-top" alt="cello">
     <div class="card-body">
       <h5 class="card-title">Cello Cremona Sc-175 3/4 Estudio Superio</h5>
       <p class="card-text">$703.013,04</p>
@@ -134,7 +134,7 @@
     </div>
   </div>
   <div class="card h-100" style="width: 18rem;">
-    <img src="/img/productos/celu motorola.jpg" class="card-img-top" alt="celular motorola">
+    <img src="./img/productos/celu motorola.jpg" class="card-img-top" alt="celular motorola">
     <div class="card-body">
       <h5 class="card-title"> Motorola Edge 30 Neo 128 GB ice palace 8 GB RAM</h5>
       <p class="card-text">$149.999</p>
